# packages/api/src/controllers/TutorController/TutorController.ts
@@ -1,22 +1,21 @@
 /* eslint-disable @typescript-eslint/require-await */
 import { Body, Controller, Hidden, Post, Query, Route } from 'tsoa';
 
-import {
-  GetStudentsBySubjectsRequestBody, GetTutorsBySubjectsRequestBody,
-} from '@adopt-a-student/common';
-
-import { CallableName } from '../../constants';
+import { GetStudentsBySubjectsRequestBody } from '@adopt-a-student/common';
 
 /** Provided automatically by Firebase */
-type FirebaseCallableFunctionContext = any;
+// type FirebaseCallableFunctionContext = any;
 
 // ! tsoa doesnt seem to accept variables as names for routes, however it takes in variable values
-// ! so the routes are named
+// ! so the routes are named after the variables, and the actual name is exported
 
-const a1 = "";
-const a2 = "";
-const a3 = "";
+const createTutor = "a1";
+const getTutorsBySubjects = "a2";
+const a3 = "a3";
 
+const exportedNames = [createTutor, getTutorsBySubjects, a3] as const;
+
+/*
 const namedKeys = { a1, a2, a3 };
 // const { x: a, z: c, p: d } = namedKeys;
 const custom = {
@@ -32,50 +31,47 @@ console.log(
 );
 
 const enumv = CallableName.getStudentsBySubjects.toString() + "/";
+*/
 
 // hide props decorator https://tsoa-community.github.io/docs/decorators.html#hidden
 
-@Route()
-export default class StudentsController extends Controller {
-  static callableNames = Object.keys(namedKeys).reduce(
+@Route("/")
+export class TutorController extends Controller {
+  /* static callableNames = Object.keys(namedKeys).reduce(
     (acc, name) => ({ ...acc, [name]: name }),
     {} as Record<keyof typeof namedKeys, keyof typeof namedKeys>
   );
+  */
+  callableNames = exportedNames;
 
-  @Post(a1)
-  static createStudent(
+  @Post(createTutor)
+  public static createTutor(
     @Body() body: GetStudentsBySubjectsRequestBody,
-    @Query() @Hidden() context: FirebaseCallableFunctionContext = {}
-  ): Promise<any> {
-    return Promise.resolve();
+    @Query() @Hidden() context: any = {}
+  ): Promise<string> {
+    return Promise.resolve("ss");
   }
 
-  @Post(a2)
-  static getStudentsBySubjects(
+  @Post(getTutorsBySubjects)
+  public static getTutorsBySubjects(
     @Body() body: GetStudentsBySubjectsRequestBody,
-    @Query() @Hidden() context: FirebaseCallableFunctionContext = {}
-  ): Promise<any> {
-    return Promise.resolve();
-  }
-
-  @Post(a3)
-  static getTutorsBySubjects(
-    @Body() body: GetTutorsBySubjectsRequestBody,
-    @Query() @Hidden() context: FirebaseCallableFunctionContext = {}
-  ): Promise<any> {
-    return Promise.resolve();
+    @Query() @Hidden() context: any = {}
+  ): Promise<string> {
+    return Promise.resolve("edec");
   }
 }
 
+/*
 enum wer {
   a,
   b,
   c,
 }
+*/
 
 // const a = { ...wer };
 
 // const b = Object.values(a).map((k) => k as const);
 
-type q = keyof typeof a;
+// type q = keyof typeof a;
 // const c:  q,  = "";
