# packages/api/tsoa-build/swagger-spec.json
@@ -9,6 +9,72 @@
 			"TutorId": {
 				"type": "string"
 			},
+			"LinkedTutorData": {
+				"description": "Data about a tutor from the perspective of a student, as it is stored in database",
+				"properties": {
+					"id": {
+						"$ref": "#/components/schemas/TutorId",
+						"description": "Id of the tutor related to the student"
+					}
+				},
+				"required": [
+					"id"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"EmailString": {
+				"type": "string",
+				"description": "A valid email address"
+			},
+			"LocaleSubjectId": {
+				"type": "string"
+			},
+			"ConfidenceLevelEnum": {
+				"description": "Confidence level options mapped to integers",
+				"enum": [
+					0,
+					1,
+					2,
+					3
+				],
+				"type": "number"
+			},
+			"LocaleCode": {
+				"type": "string",
+				"enum": [
+					"en",
+					"fr"
+				]
+			},
+			"UserSubjectData": {
+				"description": "Data about a subject specific to a user, as it is stored in database\r\n// ? should this be public?",
+				"properties": {
+					"id": {
+						"$ref": "#/components/schemas/LocaleSubjectId",
+						"description": "Unique id to the related subject"
+					},
+					"confidenceLevel": {
+						"$ref": "#/components/schemas/ConfidenceLevelEnum",
+						"description": "A rating of how confident a user feels in the subject, the numbers"
+					},
+					"detail": {
+						"type": "string",
+						"description": "Detail of the users experience with the subject"
+					},
+					"locale": {
+						"$ref": "#/components/schemas/LocaleCode"
+					}
+				},
+				"required": [
+					"id",
+					"confidenceLevel",
+					"detail",
+					"locale"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"StudentId": {
 				"type": "string"
 			},
@@ -26,12 +92,142 @@
 				"type": "string",
 				"description": "An internet link"
 			},
-			"LocaleCode": {
-				"type": "string",
-				"enum": [
-					"en",
-					"fr"
-				]
+			"PrivateStudentData": {
+				"description": "Schema of data that represents a student, as it is stored in database",
+				"properties": {
+					"id": {
+						"$ref": "#/components/schemas/UserId",
+						"description": "Unique id for a user"
+					},
+					"imageUrl": {
+						"$ref": "#/components/schemas/UrlString",
+						"description": "Link to profile image, if defined"
+					},
+					"introduction": {
+						"type": "string",
+						"description": "Optional text for users to introduce themselves,\r\ndescribe their experience, what subjects they are interested in etc"
+					},
+					"prefferedLocales": {
+						"items": {
+							"$ref": "#/components/schemas/LocaleCode"
+						},
+						"type": "array",
+						"description": "The locales a user prefers for content"
+					},
+					"userName": {
+						"type": "string",
+						"description": "Username which will be displayed for a user"
+					},
+					"email": {
+						"$ref": "#/components/schemas/EmailString",
+						"description": "Email to allow users to start communicating"
+					},
+					"relatedSubjects": {
+						"items": {
+							"$ref": "#/components/schemas/UserSubjectData"
+						},
+						"type": "array",
+						"description": "Links to subjects a user is interested in learning/teaching (depends on type of user)\r\nand user specific information about the user relating to a specific subject"
+					},
+					"relatedTutors": {
+						"items": {
+							"$ref": "#/components/schemas/LinkedTutorData"
+						},
+						"type": "array",
+						"description": "Data about the tutors a student is involved with"
+					}
+				},
+				"required": [
+					"id",
+					"prefferedLocales",
+					"userName",
+					"email",
+					"relatedSubjects",
+					"relatedTutors"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CreateStudentResponseBody": {
+				"properties": {
+					"student": {
+						"$ref": "#/components/schemas/PrivateStudentData"
+					}
+				},
+				"required": [
+					"student"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_PrivateStudentData.Exclude_keyofPrivateStudentData.id__": {
+				"properties": {
+					"relatedTutors": {
+						"items": {
+							"$ref": "#/components/schemas/LinkedTutorData"
+						},
+						"type": "array",
+						"description": "Data about the tutors a student is involved with"
+					},
+					"email": {
+						"$ref": "#/components/schemas/EmailString",
+						"description": "Email to allow users to start communicating"
+					},
+					"relatedSubjects": {
+						"items": {
+							"$ref": "#/components/schemas/UserSubjectData"
+						},
+						"type": "array",
+						"description": "Links to subjects a user is interested in learning/teaching (depends on type of user)\r\nand user specific information about the user relating to a specific subject"
+					},
+					"imageUrl": {
+						"$ref": "#/components/schemas/UrlString",
+						"description": "Link to profile image, if defined"
+					},
+					"introduction": {
+						"type": "string",
+						"description": "Optional text for users to introduce themselves,\r\ndescribe their experience, what subjects they are interested in etc"
+					},
+					"prefferedLocales": {
+						"items": {
+							"$ref": "#/components/schemas/LocaleCode"
+						},
+						"type": "array",
+						"description": "The locales a user prefers for content"
+					},
+					"userName": {
+						"type": "string",
+						"description": "Username which will be displayed for a user"
+					}
+				},
+				"required": [
+					"relatedTutors",
+					"email",
+					"relatedSubjects",
+					"prefferedLocales",
+					"userName"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_PrivateStudentData.id_": {
+				"$ref": "#/components/schemas/Pick_PrivateStudentData.Exclude_keyofPrivateStudentData.id__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"CreateStudentRequestBody": {
+				"properties": {
+					"student": {
+						"$ref": "#/components/schemas/Omit_PrivateStudentData.id_"
+					}
+				},
+				"required": [
+					"student"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"FirebaseCallableFunctionContext": {
+				"description": "Provided automatically by Firebase"
 			},
 			"PublicStudentData": {
 				"properties": {
@@ -85,9 +281,6 @@
 			"GenericSubjectId": {
 				"type": "string"
 			},
-			"LocaleSubjectId": {
-				"type": "string"
-			},
 			"SubjectId": {
 				"anyOf": [
 					{
@@ -99,78 +292,6 @@
 				]
 			},
 			"GetStudentsBySubjectsRequestBody": {
-				"properties": {
-					"subjectIds": {
-						"items": {
-							"$ref": "#/components/schemas/SubjectId"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"subjectIds"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"FirebaseCallableFunctionContext": {
-				"description": "Provided automatically by Firebase"
-			},
-			"PublicTutorData": {
-				"properties": {
-					"id": {
-						"$ref": "#/components/schemas/UserId",
-						"description": "Unique id for a user"
-					},
-					"imageUrl": {
-						"$ref": "#/components/schemas/UrlString",
-						"description": "Link to profile image, if defined"
-					},
-					"introduction": {
-						"type": "string",
-						"description": "Optional text for users to introduce themselves,\r\ndescribe their experience, what subjects they are interested in etc"
-					},
-					"prefferedLocales": {
-						"items": {
-							"$ref": "#/components/schemas/LocaleCode"
-						},
-						"type": "array",
-						"description": "The locales a user prefers for content"
-					},
-					"userName": {
-						"type": "string",
-						"description": "Username which will be displayed for a user"
-					},
-					"available": {
-						"type": "boolean",
-						"description": "Represents whether a tutor is available to take on a student"
-					}
-				},
-				"required": [
-					"id",
-					"prefferedLocales",
-					"userName",
-					"available"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"GetTutorsBySubjectsResponseBody": {
-				"properties": {
-					"tutors": {
-						"items": {
-							"$ref": "#/components/schemas/PublicTutorData"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"tutors"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"GetTutorsBySubjectsRequestBody": {
 				"properties": {
 					"subjectIds": {
 						"items": {
@@ -201,7 +322,7 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/a": {
+		"/createStudent": {
 			"post": {
 				"operationId": "CreateStudent",
 				"responses": {
@@ -210,7 +331,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/GetStudentsBySubjectsResponseBody"
+									"$ref": "#/components/schemas/CreateStudentResponseBody"
 								}
 							}
 						}
@@ -223,14 +344,14 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/GetStudentsBySubjectsRequestBody"
+								"$ref": "#/components/schemas/CreateStudentRequestBody"
 							}
 						}
 					}
 				}
 			}
 		},
-		"/undefined": {
+		"/getStudentsBySubjects": {
 			"post": {
 				"operationId": "GetStudentsBySubjects",
 				"responses": {
@@ -259,16 +380,16 @@
 				}
 			}
 		},
-		"/createGenericSubjecta": {
+		"/createTutor": {
 			"post": {
-				"operationId": "GetTutorsBySubjects",
+				"operationId": "CreateTutor",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/GetTutorsBySubjectsResponseBody"
+									"type": "string"
 								}
 							}
 						}
@@ -281,7 +402,36 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/GetTutorsBySubjectsRequestBody"
+								"$ref": "#/components/schemas/GetStudentsBySubjectsRequestBody"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/getTutorsBySubjects": {
+			"post": {
+				"operationId": "GetTutorsBySubjects",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/GetStudentsBySubjectsRequestBody"
 							}
 						}
 					}
